--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,10 @@
-# Prerequisites
-*.d
+#logo = """88888888ba  8b        d8  88  
+#88      "8b  Y8,    ,8P   88  
+#88      ,8P   `8b  d8'    88  
+#88_____-8P'     Y88P      88  
+#88------8b,     d88b      88  
+#88      `8b   ,8P  Y8,    88  
+#88      a8P  d8'    `8b   88  
+#88888888P"  8P        Y8  88 
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+My mane khan
